[package]
name = "emojis-rs"
version = "0.1.1"
edition = "2024"
description = "A collection of emoji constants for Rust applications"
license = "MIT"
repository = "https://github.com/dyncoch/emojis-rs"
homepage = "https://github.com/dyncoch/emojis-rs"
documentation = "https://docs.rs/emoji-rs"
keywords = ["emoji", "unicode", "constants", "cli", "terminal"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Lucas F.Martins <dyncoch@gmail.com>"]

[dependencies]
